# FakeGPU

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  MANIFEST.in  QUICK_REFERENCE.md  README.md  README.zh-CN.md  README.zh-TW.md  TODOs.md  cluster_report.schema.json  demo_usage.py  ftest  mkdocs.yml  preflight_report.schema.json  pyproject.toml  setup.cfg  setup.py  show_gpu_info.py  validation_manifest.schema.json
docs/: ai-researcher-preflight.md  ai-researcher-preflight.zh.md  deepspeed-validation.md  deepspeed-validation.zh.md  distributed-sim-usage.md  distributed-sim-usage.zh.md  error-simulation.md  error-simulation.zh.md  getting-started.md  getting-started.zh.md  index.md  index.zh.md  llm-inference-estimation.md  llm-inference-estimation.zh.md  llm-sft-memory-estimation.md  llm-sft-memory-estimation.zh.md  macos-compatibility.md  multi-node-design.md  multi-node-design.zh.md  phase2-custom-torch.md  phase2-custom-torch.zh.md  privateuse1-roadmap.md  project-structure.md  project-structure.zh.md  quick-reference.md  quick-reference.zh.md  reports-and-validation.md  reports-and-validation.zh.md  repository-and-performance-analysis.md  repository-and-performance-analysis.zh.md  validation-manifests.md  validation-manifests.zh.md
fakegpu/: __init__.py  __main__.py  _api.py  _bandwidth_worker.py  _preflight_bootstrap.py  _runtime.py  _stage.py  _upstream.py  _version.py  capabilities.py  demo.py  distributed_cli.py  doctor.py  flop_counter.py  fsdp_memory.py  llm_cli.py  llm_estimator.py  memory_estimator.py  performance_model.py  preflight.py  profile_catalog.py  repository_analyzer.py  smi.py  torch_patch.py  validation.py  workspace_cli.py  workspace_profiles.py
profiles/: README.md  a10.yaml  a100-1g.yaml  a30.yaml  b300.yaml  h200.yaml  jetson-agx-orin-64gb.yaml  jetson-t5000.yaml  l4.yaml  p4.yaml  rtx3090ti.yaml  (+4 more)
src/cuda/: CMakeLists.txt  cuda_defs.hpp  cuda_driver_defs.hpp  cuda_driver_passthrough.hpp  cuda_driver_stubs.cpp  cuda_mode_dispatch.hpp  cuda_stubs.cpp  cudart_defs.hpp  cudart_stubs.cpp
(+401 files in other folders)
