[build-system]
requires = ["setuptools>=64", "wheel", "cmake>=3.14"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = [".", "test"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
# Ruff 0.16 expanded its zero-configuration defaults. Keep CI on the
# project's established correctness-focused rules instead of inheriting a
# tool-version-dependent rule set.
select = ["E4", "E7", "E9", "F"]

[tool.fakegpu.uv]
# Dependency sets consumed by scripts (especially for macOS→Linux VM flows).
# Keep these under `[tool.*]` to avoid impacting the setuptools packaging config.
linux_vm_gpu_mgmt = [
  "nvidia-ml-py>=12.0.0",
  "gpustat>=1.1.1",
]
